[package]
name = "stream-reconnect"
version = "0.3.1"
authors = ["LightQuantum <self@lightquantum.me>", "David Raifaizen <david.raifaizen@protonmail.com>"]
edition = "2018"
description = "stream traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stream", "io"]
repository = "https://github.com/PhotonQuantum/stream-reconnect"
readme = "README.md"

[features]
default = ["tokio"]

[dependencies]
tokio = { version = "1", features = ["time"], optional = true }
async-std = { version = "1", optional = true }
log = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
futures = "0.3"
tokio-tungstenite = "*"