[package]
name = "stream-reconnect"
version = "0.4.0-beta.2"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>", "LightQuantum <self@lightquantum.me>"]
edition = "2018"
description = "Stream-wrapping traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stream", "io"]
repository = "https://github.com/PhotonQuantum/stream-reconnect"
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    ".mergify.yml",
    "rust-toolchain.toml"
]

[features]
default = ["tokio"]
not-send = []

[dependencies]
tokio = { version = "1", features = ["time"], optional = true }
async-std = { version = "1", optional = true }
log = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
futures = "0.3"
tokio-tungstenite = "0.17"