[package]
name = "stream-reconnect"
version = "0.4.0-beta.4"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>", "LightQuantum <self@lightquantum.me>"]
edition = "2018"
description = "Stream-wrapping traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stream", "io"]
repository = "https://github.com/PhotonQuantum/stream-reconnect"
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    ".mergify.yml",
    "rust-toolchain.toml"
]

[features]
default = ["tokio", "std"]
std = ["log/std", "rand/std", "futures/std"]
not-send = []

[dependencies]
tokio = { version = "1", features = ["time"], optional = true }
async-std = { version = "1", optional = true }
log = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
dyn-clone = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
futures = "0.3"
tokio-tungstenite = "0.24"